<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evolution Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game_choose">GameChooseActivity</string>
    <string name="yourTurnSpinner">Your Turn</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="title_activity_card_view">CardViewActivity</string>
    <string name="cancelString">Cancel</string>
    <string name="selectString">Select</string>
    <string name="discardString">Discard</string>
    <string name="title_activity_creature_detail">CreatureDetailActivity</string>
    <string name="refreshString">Refresh</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="newGameString">Start New Game</string>
    <string name="continueString">Continue Old Game</string>
    <string name="loginString">Login</string>
    <string name="EvolutionGame">Evo</string>

</resources>