<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    tools:context=".MainMenuActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="34dp"
        android:paddingTop="34dp"
        android:text="@string/EvolutionGame"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="64sp" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newGameString"
        android:textSize="14sp" />

    <Button
        android:id="@+id/oldGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueString"
        android:textSize="14sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginString"
        android:textSize="14sp" />

</LinearLayout>