<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    tools:context=".CardViewActivity" >

    <TextView
        android:id="@+id/cardNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/cardDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/card1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/chooseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectString" />

        <Button
            android:id="@+id/discardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discardString" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelString" />

    </LinearLayout>

</LinearLayout>